Update DomPurify lib from 2.1.1 to 2.2.2
- Update make file which use to update the Dompurify lib based on tag or latest release.

Reference: KW-3589

--- a/client/dompurify/Makefile
+++ b/client/dompurify/Makefile
@@ -1,11 +1,13 @@
 # Usage: 
 #
 # make update 
-# make update TAG=tags/2.1.1
+# make update TAG=2.1.1
 #
 TAG ?= latest
 
-URL = $(shell curl -sq https://api.github.com/repos/cure53/DOMPurify/releases/$(TAG)|jq -r .tarball_url)
+RELEASE_URL = $(shell curl -sq https://api.github.com/repos/cure53/DOMPurify/releases/$(TAG)|jq -r .tarball_url)
+TAG_URL = $(shell curl -sq https://api.github.com/repos/cure53/DOMPurify/tags|jq '.[]|select(.name == "$(TAG)")|.tarball_url')
+URL ?= $(if $(filter latest, $(TAG)), $(RELEASE_URL), $(TAG_URL))
 VERSION = $(shell basename $(URL))
 
 all:
