KW-3674 Add admin config to disable themes
- Added ENABLE_THEMES config option in config.php and defaults.php
- ENABLE_THEMES is to false which disable the theme dropdown from settings context

Reference: KW-3674

--- a/config.php.dist
+++ b/config.php.dist
@@ -98,6 +98,9 @@
 	// Users can override the 'logged-in' theme in the settings.
 	define("THEME", "");
 
+	// Enable themes.
+	define("ENABLE_THEMES", true);
+
 	// General WebApp icon set. This will be loaded by default for every user.
 	// Users can override the iconset in the settings.
 	define("ICONSET", "breeze");
