KW-3675 Add admin config to disable iconsets
- Iconsets can now be disabled with congif option ENABLE_ICONSETS
- If disabled, the dropdown of selecting icons will be hidden in the setting context

Reference : KW-3675

--- a/config.php.dist
+++ b/config.php.dist
@@ -105,6 +105,9 @@
 	// Users can override the iconset in the settings.
 	define("ICONSET", "breeze");
 
+	// Enable iconsets.
+	define("ENABLE_ICONSETS", true);
+
 	// The title that will be shown in the title bar of the browser
 	define("WEBAPP_TITLE", "Kopano WebApp");
 
